<resources>
    <string name="app_name">FlightStats</string>
    <string name="find_your_flight">Find your flight</string>
    <string name="airport">Airport</string>
    <string name="dates">Dates</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="search_your_flight">Search your flight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>